--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             
             <i class="fa-solid fa-g"></i>
         </a> <br>  where all your needs for <br> electronics are satisfied</h1>
-        <img src="gallery/BLOG.jpeg" alt="">
+        <img src="Gallery/BLOG.jpeg" alt="">
      </div>
 </body>
 </html>
