edited the blog post

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <i class="fa-solid fa-e"></i>
             
             <i class="fa-solid fa-g"></i>
-        </a> <br>  where all your needs for <br> electronics are satisfied</h1>
+        </a> <br>  experts in  <br> Electonics and Gadgets</h1>
         <img src="Gallery/BLOG.jpeg" alt="">
      </div>
 </body>
