made the blog post2

--- a/index.html
+++ b/index.html
@@ -49,7 +49,15 @@
                            
                            <img src="gallery/jbl.jpg" alt="headphones">
                       </div>
-
+                      <div class="purchase">
+                        <button>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span> SHOP<i class="fa-solid fa-cart-shopping"></i>
+                          </button>
+                      </div>
+                    
             </div>
                   <div class="purchase">
                     <button>
@@ -58,6 +66,33 @@
                         <span></span>
                         <span></span> Explore<i class="fa-solid fa-cart-shopping"></i>shop
                       </button>
+                  </div>
+
+
+
+
+                  <div class="new">
+                      <h3>Smartwatches</h3>
+                      <p>
+                        Get smarter with watches from  Apple, samsung, Huawei at a good deal like never before
+                      </p>
+
+                      <div class="img">
+                        <img src="gallery/watch.jpg" alt="">
+                        <img src="gallery/watch1.jpg" alt="">
+                        <img src="gallery/watch2.jpg" alt="">
+                        <img src="gallery/watch3.jpeg" alt="">
+                        <img src="gallery/watch4.jpg" alt="">
+                      </div>
+
+                      <div class="purchase">
+                        <button>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span> SHOP<i class="fa-solid fa-cart-shopping"></i>
+                          </button>
+                      </div>
                   </div>
      <!-- <!------------footer--------------->
 
