--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
         <h1 class="header"><i class="fa-brands fa-digital-ocean"></i>CEAN <i class="fa-solid fa-e"></i>LECTRICALS & <i class="fa-solid fa-g"></i>ADGETS  </h1>
 
         <div class="nav-bar">
-            <a href="">Shop <i class="fa-solid fa-cart-shopping"></i> </a>
-            <a href="">About</a>
+            <a href="explore.html">Explore </i> </a>
             <a href="">Contact</a>
-            <a href="">
+            <a href="index.html">
                 <i class="fa-brands fa-digital-ocean"></i>
                 <i class="fa-solid fa-e"></i>
                 
@@ -64,7 +63,7 @@
                         <span></span>
                         <span></span>
                         <span></span>
-                        <span></span> Explore<i class="fa-solid fa-cart-shopping"></i>shop
+                        <span></span> Explore
                       </button>
                   </div>
 
